<resources>
    <string name="app_name">QiuBai</string>
    <string name="menu_item_1">糗事</string>
    <string name="menu_item_2">糗友圈</string>
    <string name="menu_item_3">发现</string>
    <string name="menu_item_4">小纸条</string>
    <string name="user_name">逯腾</string>
    <string name="menu_small_group">小分组</string>
    <string name="home_text_view">homeTextView</string>
    <string name="menu_item_me">我</string>
    <string name="exit">退出</string>
    <string name="setting">设置</string>
    <string name="title" >糗事百科</string>
    <string name="select">发现</string>
    <string name="small_note">小纸条</string>
    <string name="me">我</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_small">好笑</string>
    <string name="comment_comment">评论</string>
    <string name="comment_share">分享</string>
    <string name="article_user_name">用户名</string>
</resources>
